feat: informations added in the footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,173 +18,13 @@
 		{% endblock %}
 	</head>
 	<body class="bg-primary min-h-screen w-full overflow-x-hidden">
-		{% block header %}
-			<header class="no_print z-10 h-[80px] md:h-[100px] w-full absolute flex justify-between px-6 py-3 md:px-12 bg-transparent duration-300">
-				<a href="{{ path('home') }}" class=""><img src={{ asset('/images/svg/'~ "logo-white.svg")}} alt="Logo Quai Antique blanc" class="h-full"></a>
-				<button class="md/5:hidden z-20 md/5:z-0" id="menu-hamburger">
-					<div class="hamburger-lines close">
-						<span class="line line1"></span>
-						<span class="line line2"></span>
-						<span class="line line3"></span>
-					</div>
-				</button>
-				<nav class="hidden md/5:flex md/5:items-center uppercase duration bg-primary" id="header-menu">
-					<ul class="md/5:inline-flex text-secondary font-secondary relative top-[57px] text-sm xl:text-lg">
-						<li>
-							<a href={{ path('home') }} class="{{ app.request.attributes.get('_route') == 'home' ? 'active' : 'not-active' }}">Accueil</a>
-						</li>
-						<li>
-							<a href={{ path('card') }} class="{{ app.request.attributes.get('_route') == 'card' ? 'active' : 'not-active' }}">Carte</a>
-						</li>
-						{% if app.user and 'ROLE_ADMIN' in app.user.roles %}
-							<li>
-								<a class="{{ app.request.attributes.get('_route') == 'admin_reservation' ? 'active' : 'not-active' }}" href="{{ url('admin_reservations', { 'service' : 'midi' }) }}">Réservations</a>
-							</li>
-						{% else %}
-							<li>
-								<a href={{ path('reservation') }} class="{{ app.request.attributes.get('_route') == 'reservation' ? 'active' : 'not-active' }}">Réserver</a>
-							</li>
-						{% endif %}
-						<li>
-							<a href={{ path('contact') }} class="{{ app.request.attributes.get('_route') == 'contact' ? 'active' : 'not-active' }}">Contact</a>
-						</li>
-						{% if app.user %}
-							{% if 'ROLE_ADMIN' in app.user.roles %}
-								<li>
-									<a class="{{ app.request.attributes.get('_route') == 'home' ? 'admin_profil' : 'not-active' }}" href="{{ url('admin_profil', {'page_up':'informations', 'page_down' : 'carousel'}) }}">Profil</a>
-								</li>
-							{% else %}
-								<li>
-									<a class="{{ app.request.attributes.get('_route') == 'client_profil' ? 'active' : 'not-active' }}" href="{{ url('client_profil', {'page_down' : 'modèles' }) }}">Profil</a>
-								</li>
-							{% endif %}
-							<li>
-								<a href={{ path('logout') }} class="not-active">Deconnexion</a>
-							</li>
-						{% else %}
-							<li>
-								<a href={{ path('login') }} class="{{ (app.request.attributes.get('_route') == 'login' or app.request.attributes.get('_route') == 'app_forgot_password_request'
-																	 or app.request.attributes.get('_route') == 'app_check_email' or app.request.attributes.get('_route') == 'app_reset_password') ? 'active' : 'not-active' }}">Connexion</a>
-							</li>
-							<li>
-								<a href={{ path('sign_up') }} class="{{ app.request.attributes.get('_route') == 'sign_up' ? 'active' : 'not-active' }}">Inscription</a>
-							</li>
-						{% endif %}
-					</ul>
-				</nav>
-			</header>
-		{% endblock %}
+		{% include('partials/_header.html.twig') %}
 		{% block body %}{% endblock %}
-		{% block footer %}
-			<footer class="no_print bg-500 text-secondary font-third py-4 px-5 w-full md:flex md:justify-center text-sm">
-				<div class="grid max-w-[440px] mx-auto md:w-fit md:max-w-[340px] md:min-w-[300px] md:mx-0 lg:w-[400px]">
-					<p class="footer_title">Horaires</p>
-					<ul class="scedules text-xs">
-						<li>Lundi
-							<ul>
-								<li>Fermé</li>
-								<li>19:00 - 22:00</li>
-							</ul>
-						</li>
-						<li>Mardi
-							<ul>
-								<li>Fermé</li>
-								<li>Fermé</li>
-							</ul>
-						</li>
-						<li>Mercredi
-							<ul>
-								<li>11:30 - 15:00</li>
-								<li>19:00 - 22:00</li>
-							</ul>
-						</li>
-						<li>Jeudi
-							<ul>
-								<li>11:30 - 15:00</li>
-								<li>19:00 - 22:00</li>
-							</ul>
-						</li>
-						<li>Vendredi
-							<ul>
-								<li>11:30 - 15:00</li>
-								<li>19:00 - 22:00</li>
-							</ul>
-						</li>
-						<li>Samedi
-							<ul>
-								<li>11:30 - 15:00</li>
-								<li>19:00 - 22:00</li>
-							</ul>
-						</li>
-						<li>Dimanche
-							<ul>
-								<li>11:30 - 15:00</li>
-								<li>19:00 - 22:00</li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-				<div class="sm:flex gap-6 max-w-[440px] mx-auto md:mx-0 lg:max-w-[600px]">
-					<div class="grid grid-cols-2 my-4 sm:flex-1 sm:flex sm:gap-6 md:my-0">
-						<div>
-							<p class="footer_title">Site</p>
-							<ul class="text-xs">
-								<li>
-									<a class="hover:underline hover:underline-offset-2" href="{{ path('home') }}">Accueil</a>
-								</li>
-								<li>
-									<a class="hover:underline hover:underline-offset-2" href="{{ path('card') }}">Carte</a>
-								</li>
-								<li>
-									<a class="hover:underline hover:underline-offset-2" href=" {{ path('reservation') }}">Réserver</a>
-								</li>
-								<li>
-									<a class="hover:underline hover:underline-offset-2" href="{{ path('contact') }}">Contact</a>
-								</li>
-								{% if app.user %}
-									{% if app.user.roles == 'ROLE_ADMIN' %}
-										<li>
-											<a class="hover:underline hover:underline-offset-2" href="{{ path('admin_profil') }}">Profil</a>
-										</li>
-									{% else %}
-										<li>
-											<a class="hover:underline hover:underline-offset-2" href="{{ path('client_profil') }}">Profil</a>
-										</li>
-									{% endif %}
-									<li>
-										<a class="hover:underline hover:underline-offset-2" href="{{ path('logout') }}">Deconnexion</a>
-									</li>
-								{% else %}
-									<li>
-										<a class="hover:underline hover:underline-offset-2" href="{{ path('login') }}">Connexion</a>
-									</li>
-									<li>
-										<a class="hover:underline hover:underline-offset-2" href="{{ path('sign_up') }}">Inscription</a>
-									</li>
-								{% endif %}
-							</ul>
-						</div>
-						<div>
-							<p class="footer_title">Contact</p>
-							<ul class="text-xs">
-								<li>
-									<a class="hover:underline hover:underline-offset-2" href="tel:">+33 00 00 00 00 00</a>
-								</li>
-								<li>
-									<a class="hover:underline hover:underline-offset-2" href="mailto:lorem@ipsum.com">lorem@ipsum.com</a>
-								</li>
-								<li>
-									<a class="hover:underline hover:underline-offset-2" href="">
-										<i class="fa-brands fa-square-facebook text-2xl mt-1"></a>
-									</i>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<a href="{{ path('home') }}"><img class="max-w-[160px] mx-auto sm:inline-block sm:w-fit sm:mx-0" src={{ asset('/images/svg/'~'logo-white.svg')}} alt=""></a>
-				</div>
-			</footer>
-		{% endblock %}
+		{# {% include('Footer/footer.html.twig') %} #}
+		{# {% render ('footer_data') %} #}
+		{# {% include controller('App\\Controller\\FooterController::footerData') %} #}
+		{{ render(path('footer_data')) }}
+		{# {% render(controller('App\\Controller\\FooterController::footerData')) %} #}
 		<script src="https://kit.fontawesome.com/4ba6d56c15.js" crossorigin="anonymous"></script>
 		<script src={{ asset('/js/global-script.js') }}></script>
 		{% block scripts %}{% endblock %}
