--- a/templates/Contact/contact.html.twig
+++ b/templates/Contact/contact.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 	<main class="min_main pt-24 flex justify-evenly">
-		<div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] image_container contact_image relative"></div>
+		<div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] image_container relative" id="moving-pic"><div class="contact_image"></div></div>
 		<section class="w-full lg:w-[45%] mb-16">
 			<div class="w-full mx-auto relative top-1/2 -translate-y-1/2">
 				<h1 class="title_section ">Pour nous contacter</h1>
@@ -61,4 +61,8 @@
 
 		</section>
 	</main>
+{% endblock %}
+{% block scripts %}
+{{ parent() }}
+<script src={{ asset('/js/moving-pic/'~'script.js') }}></script>
 {% endblock %}
