--- a/templates/SignUp/sign.html.twig
+++ b/templates/SignUp/sign.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <main class="min_main pt-24 flex justify-evenly" id="sign-up">
-        <div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] image_container signUp_image relative"></div>
+        <div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] image_container relative" id="moving-pic"><div class="signUp_image"></div></div>
         <section class="w-full lg:w-[45%] mb-16 ">
             <div class="w-full mx-auto relative flex flex-col top-1/2 -translate-y-1/2">
                 {% block content %}
@@ -14,6 +14,7 @@
     </main>
 {% endblock %}
 {% block scripts %}
+{{ parent() }}
 <script src={{ asset('/js/signUp-login/'~'script.js') }}></script>
-
+<script src={{ asset('/js/moving-pic/'~'script.js') }}></script>
 {% endblock %}
