--- a/templates/Client/profil.html.twig
+++ b/templates/Client/profil.html.twig
@@ -23,49 +23,69 @@
                         <label for="email" class="hidden md:block">Email :</label>
                         <div class="form_profilContainer bg-400/20 input_profil">
                             <i class="fa-solid fa-at form_icon"></i>
+                            {% if not is_granted('ROLE_VERIFIED')  %}
+                            <input disabled class="input_whitePlaceholder" type="email" name="email" id="email" placeholder={{ app.user.email }} required minlength=5 maxlength=80 value={{ last_email }}>
+                            {% else %}
                             <input class="input_whitePlaceholder" type="email" name="email" id="email" placeholder={{ app.user.email }} required minlength=5 maxlength=80 value={{ last_email }}>
-                            <button type="submit" id="change_email" class="form_icon" ><i class="fa-solid fa-pen"></i></button>
+                            <button type="submit" id="change_email" class="form_icon" ><i class="fa-solid fa-pen sm-hide"></i><p class="opacity-80 hover:opacity-100 hidden sm:block">Modifier</p></button>
+                            {% endif %}
                         </div>
                     </form>
-                    <form class="form_profil gap-y-2 items-center" method="POST">
+                    <form class="form_profil items-center" method="POST">
                         <label for="password" class="hidden md:block">Mot de passe :</label>
                         <div class="form_profilContainer bg-400/20 input_profil relative">
                             <i class="fa-solid fa-lock form_icon"></i>
-                            <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="password" id="password" placeholder="********" required pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" onfocus="displayRules()" onfocusout="removeRules()" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
-                            <span role="button" onclick="togglePassword(event)">
-                                <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
-                                <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
-                            </span>
-                            <button type="submit" id="change_password" class="form_icon" ><i class="fa-solid fa-pen"></i></button>
-                            <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_password"></small>
-                            <small class="absolute w-11/12 mx-auto top-full hide" id="password_rule">Doit contenir au moins 8 caractères, une minuscule, une majuscule et un chiffre.</small>
-                            <small class="absolute w-11/12 mx-auto top-full hide" id="need_password">
-                                Veuillez insérer votre mot de passe puis validez à nouveau.<br>
-                                <a href={{ path('app_forgot_password_request') }} class="hover:underline duration-75 underline-offset-2" id="forgot_password">Mot de passe oublié ?</a>
-                            </small>
+                            {% if not is_granted('ROLE_VERIFIED') %}
+                                <input disabled class="input_whitePlaceholder w-full" type="password" minlength=8 maxlength=80 name="password" id="password" placeholder="********" required pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" onfocus="displayRules()" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
+                                <span disabled role="button" onclick="togglePassword(event)">
+                                    <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
+                                    <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
+                                </span>
+                            {% else %}
+                                <input class="input_whitePlaceholder w-full" type="password" minlength=8 maxlength=80 name="password" id="password" placeholder="********" required pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" onfocus="displayRules()" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
+                                <span role="button" onclick="togglePassword(event)">
+                                    <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
+                                    <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
+                                </span>
+                                <button type="submit" id="change_password" class="form_icon" ><i class="fa-solid fa-pen sm-hide"></i><p class="opacity-80 hover:opacity-100 hidden sm:block">Modifier</p></button>
+                            {% endif %}
                         </div>
+                        <small class="block col-start-2 hide form_error" id="error_password"></small>
+                        <small class="block col-start-2 hide" id="need_password">
+                            Veuillez insérer votre mot de passe puis validez à nouveau.<br>
+                        </small>
+                        <small class="col-start-2 block" id="password_rule">Doit contenir au moins 8 caractères, une minuscule, une majuscule et un chiffre.</small>
+                        <small class="col-start-2 block">
+                            {% if is_granted('ROLE_VERIFIED') %}
+                            <a href={{ path('app_forgot_password_request') }} class="hover:underline duration-75 underline-offset-2" id="forgot_password">Mot de passe oublié ?</a>
+                            {% endif %}
+                        </small>
+                        {% if is_granted('ROLE_VERIFIED') %}
                         <label for="valid_password" class="hide change_password hidden_label">Valider le mot de passe :</label>
-                        <div class="hide form_profilContainer bg-400/20 input_profil hide change_password relative">
+                        <div class="hide form_profilContainer bg-400/20 input_profil hide change_password relative py-1">
                             <i class="fa-solid fa-lock form_icon"></i>
                             <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="valid_password" id="valid_password" placeholder="Nouveau mot de passe" pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre." required>
                             <span role="button" onclick="togglePassword(event)">
                                 <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
                                 <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
                             </span>
-                            <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_validPassword"></small>
                         </div>
+                        <small class="col-start-2 hide -top-1 relative form_error" id="error_validPassword"></small>
                         <label for="old_password" class="hide change_password hidden_label">Ancien mot de passe :</label>
-                        <div class="hide form_profilContainer bg-400/20 input_profil hide change_password relative">
+                        <div class="col-start-2 hide form_profilContainer bg-400/20 input_profil hide change_password relative py-1">
                             <i class="fa-solid fa-lock form_icon"></i>
                             <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="old_password" id="old_password" placeholder="Ancien mot de passe" pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" required title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
                             <span role="button" onclick="togglePassword(event)">
-                                <i class="fa-solid fa-eye w-[36px] hide form_icon" ></i>
+                                <i class="fa-solid fa-eye w-[36px] hide form_icon"></i>
                                 <i class="fa-solid fa-eye-slash w-[36px] form_icon"></i>
                             </span>
-                            <small class="absolute w-11/12 mx-auto top-full hide form_error" id="error_oldPassword"></small>
-                            <small class="absolute -bottom-9"><a href={{ path('app_forgot_password_request') }} class="hover:underline duration-75 underline-offset-2" id="forgot_password">Mot de passe oublié ?</a></small>
                         </div>
+                        <small class="col-start-2 relative -top-1 hide form_error" id="error_oldPassword"></small>
+                        {% endif %}
                     </form>
+                    {% if not is_granted('ROLE_VERIFIED')  %}
+                        <small class="form_error text-center" >Vous n'avez pas valider votre compte. Pour le valider, <a href="{{ path('signUp-validate') }}" class="underline underline-offset-2"> cliquez ici</a>.</small>
+                    {% endif %}
                 </div>
             </div>
         </section>
