--- a/templates/Reservation/user/reservation.user.html.twig
+++ b/templates/Reservation/user/reservation.user.html.twig
@@ -1,7 +1,7 @@
 {% extends 'Reservation/reservation.html.twig' %}
 
 {% block reservation %}
-<div class="w-full lg:w-[45%] image_container my-8 mx-4 md:mx-8 ">
+<div class="w-full lg:w-[45%] my-8 mx-4 md:mx-8 ">
 	<div class="w-full mx-auto relative top-1/2 -translate-y-1/2 pb-16">
 		<h1 class="title_section">Faites votre réservation</h1>
 		{% if error %}
