--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -3,9 +3,9 @@
 
 {% block body %}
 	<main class="pt-24 text-secondary min_main font-secondary flex items-center">
-		<fieldset class="h-fit w-11/12 mx-auto max-w-[598px] relative top-1/2 -translate-y-1/2 border border-solid border-500 p-3 text-center">
+		<fieldset class="h-fit w-11/12 mx-auto max-w-[598px] relative border border-solid border-500 p-3 text-center">
 			<legend align="center">
-				<h1 class="px-2 text-[80px] font-primary">Oups !</h1>
+				<h1 class="px-2 title_2 font-primary">Oups !</h1>
 			</legend>
 			
 			<div class="py-4">
@@ -15,7 +15,7 @@
 				<p>Nous vous prions de nous excuser pour le désagrément occasionné.</p>
 			</div>
 
-			<a href="{{ path('home') }}" class="card_backLink"><i class="fa-solid fa-arrow-left px-2"></i>Revenir à l'accueuil</a>
+			<a href="{{ path('home') }}" class="card_backLink"><i class="fa-solid fa-arrow-left px-2"></i>Revenir à l'accueil</a>
 
 		</fieldset>
 	</main>
