--- a/templates/Cookies/cookies.html.twig
+++ b/templates/Cookies/cookies.html.twig
@@ -1,18 +1,21 @@
 {% extends "base.html.twig" %}
 
+
 {% block body %}
 	<main class="pt-24 text-secondary min_main font-secondary flex items-center">
 		<fieldset class="h-fit w-11/12 mx-auto max-w-[598px] relative border border-solid border-500 p-3 text-center">
 			<legend align="center">
-				<h1 class="px-2 title_2 font-primary">404</h1>
+				<h1 class="px-2 title_2 font-primary">Les cookies</h1>
 			</legend>
 			
-			<p class="py-4"><span class="text-3xl">Oups !</span>
-				La page que vous cherchez n'existe pas.
-			</p>
+			<div class="py-4">
+				<p class="py-2">
+					Certaines fonctionnalités de ce site reposent sur l'usage de cookies.
+				</p>
+				<p>Le bandeau cookies ne s'affiche pas sur la page d'accueil lors de votre navigation car seuls des cookies nécessaires au fonctionnement du site sont déposé.</p>
+			</div>
+            
 			<a href="{{ path('home') }}" class="card_backLink"><i class="fa-solid fa-arrow-left px-2"></i>Revenir à l'accueil</a>
-
 		</fieldset>
-
 	</main>
 {% endblock %}
