--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -59,6 +59,7 @@
                             <a class="hover:underline hover:underline-offset-2" href="{{ path('sign_up') }}">Inscription</a>
                         </li>
                     {% endif %}
+                    <li><a href="{{ path('cookies') }}">Cookies</a></li>
                 </ul>
             </div>
             <div>
